--- a/sql/train01/package.json
+++ b/sql/train01/package.json
@@ -4,18 +4,34 @@
   "description": "nodejs-pro-nvminh162",
   "main": "dist/app.js",
   "scripts": {
+    "dev": "nodemon",
     "start": "tsc && node dist/app.js",
-    "dev": "tsc && node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:debug": "nodemon --inspect=9229 -e ts,tsx --exec node -r ts-node/register ./src/app.ts"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts",
+    "ignore": [
+      "node_modules"
+    ],
+    "exec": "ts-node ./src/app.ts"
   },
   "author": "nvminh162",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "16.4.7",
+    "ejs": "3.1.10",
     "express": "5.1.0"
   },
   "devDependencies": {
+    "@types/ejs": "3.1.5",
     "@types/express": "5.0.0",
     "@types/node": "22.10.7",
+    "nodemon": "3.1.9",
+    "ts-node": "10.9.2",
     "typescript": "5.7.3"
   }
 }
