--- a/sql/train01/package.json
+++ b/sql/train01/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon",
     "start": "tsc && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:debug": "nodemon --inspect=9229 -e ts,tsx --exec node -r ts-node/register ./src/app.ts"
+    "start:debug": "nodemon --inspect=9229 -e ts,tsx --exec node -r ts-node/register -r tsconfig-paths/register ./src/app.ts"
   },
   "nodemonConfig": {
     "watch": [
@@ -17,14 +17,15 @@
     "ignore": [
       "node_modules"
     ],
-    "exec": "ts-node ./src/app.ts"
+    "exec": "ts-node -r tsconfig-paths/register ./src/app.ts"
   },
   "author": "nvminh162",
   "license": "ISC",
   "dependencies": {
     "dotenv": "16.4.7",
     "ejs": "3.1.10",
-    "express": "5.1.0"
+    "express": "5.1.0",
+    "mysql2": "3.12.0"
   },
   "devDependencies": {
     "@types/ejs": "3.1.5",
